Update favicon, add Nunito fonts, and restructure views
Replaced the favicon with a new set under 'favicon_io', updated index.html to use the new icons, and removed the old favicon. Added Nunito font files and related assets. Removed AboutView and HomeView, added ImpressumView and ItemsView, and updated router and App.vue accordingly. Also added items.json to assets and updated dependencies in package.json.

--- a/client/src/quasar-variables.sass
+++ b/client/src/quasar-variables.sass
@@ -1,10 +1,13 @@
-$primary   : #1976D2
-$secondary : #A6CFC8
-$accent    : #DDE9E6
+// src/css/quasar.variables.sass
 
-$dark      : #1D1D1D
+$primary   : #cee5f2
+$secondary : #accbe1
+$accent    : #7c98b3
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #71b4a8
+$dark      : #1d1d1d
+$dark-page : #121212
+
+$positive  : #21ba45
+$negative  : #637081
+$info      : #536b78
+$warning   : #536b78
